--- a/src/app/core/sidebar/sidebar.component.scss
+++ b/src/app/core/sidebar/sidebar.component.scss
@@ -4,7 +4,7 @@ img {
   border: 0.3em solid #e4ac7e;
 }
 
-.sidebar {
+#resume-info {
   display: flex;
   flex-direction: column;
   align-items: center;
