--- a/src/app/core/sidebar/sidebar.component.scss
+++ b/src/app/core/sidebar/sidebar.component.scss
@@ -5,7 +5,9 @@ img {
 }
 
 #resume-info {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 1;
 }
