--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -17,7 +17,12 @@ body {
   max-width: 100%;
   display: flex;
 
-  @media screen and (max-width: 1650px) and (min-width: 750px) {
+  @media screen and (max-width: 1092px) and (min-width: 750px) {
+    margin-left: 40vw;
+    margin-right: 2%;
+  }
+
+  @media screen and (max-width: 1650px) and (min-width: 1100px) {
     margin-left: 30%;
     margin-right: 2%;
   }
